[tool.poetry]
name = "youtube-to-wav"
version = "0.1.0"
description = "toy project with python"
authors = ["mr-cliche-git <mr.cliche7@gmail.com>"]
license = "open source"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
pydub = "^0.25.1"
requests = "^2.32.3"
yt-dlp = "^2024.12.13"
black = "^24.10.0"
isort = "^5.13.2"


[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.11.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
